frontend/src/app/app.component.css
:host {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  color: #333;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


.toolbar {
  z-index: 10;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 60px;
  display: flex;
  align-items: center;
  background-color: #ff8200;
  color: white;
  font-weight: 600;
}

.toolbar .text {
  margin-left: 10px;
  font-size: 1.3ch;
}

.toolbar .username {
  font-size: 0.9ch;
  position: fixed;
  right: 1%;
}
.toolbar .username .usericon {
  position: fixed;
  top: -2%;
  right: 0.1%;
}

